<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/class_basic_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.adding_stuffs.classes.class_basic_details">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_year"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/class_year_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/class_fourth_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/foyr" />

                <RadioButton
                    android:id="@+id/class_third_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tyr" />

                <RadioButton
                    android:id="@+id/class_second_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/syr" />

                <RadioButton
                    android:id="@+id/class_first_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fyr" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_department"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_year_group" />

            <RadioGroup
                android:id="@+id/class_dep_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <RadioButton
                    android:id="@+id/class_cse_dep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cseDep" />

                <RadioButton
                    android:id="@+id/class_ece_dep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eceDep" />

                <RadioButton
                    android:id="@+id/class_mech_dep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mechDep" />

                <RadioButton
                    android:id="@+id/class_civil_dep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civilDep" />

                <RadioButton
                    android:id="@+id/class_eee_dep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eeeDep" />

                <RadioButton
                    android:id="@+id/class_fyr_dep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fyrDep" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_section"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_dep_group" />

            <RadioGroup
                android:id="@+id/class_section_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <RadioButton
                    android:id="@+id/class_section_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a" />

                <RadioButton
                    android:id="@+id/class_section_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b" />

                <RadioButton
                    android:id="@+id/class_section_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c" />

                <RadioButton
                    android:id="@+id/class_section_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/d" />

                <RadioButton
                    android:id="@+id/class_section_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e" />
            </RadioGroup>

            <Button
                android:id="@+id/class_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/next"
                app:icon="@drawable/next"
                app:iconGravity="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_strength_text" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_class_advisor"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_section_group" />

            <Spinner
                android:id="@+id/class_advisor_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView58"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select_strength"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_advisor_spinner" />

            <EditText
                android:id="@+id/class_strength_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/class_strength"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView59" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>