<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".activities.adding_stuffs.staffs.staff_basic_details">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_staff_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/staff_name_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:startIconDrawable="@drawable/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/designation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staff_name_text" />

            <RadioGroup
                android:id="@+id/designation_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <RadioButton
                    android:id="@+id/dr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Dr" />

                <RadioButton
                    android:id="@+id/mr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mr" />

                <RadioButton
                    android:id="@+id/mrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mrs" />

                <RadioButton
                    android:id="@+id/ms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ms" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pick_department"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/designation_group" />

            <RadioGroup
                android:id="@+id/department_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <RadioButton
                    android:id="@+id/dep_cse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cseDep" />

                <RadioButton
                    android:id="@+id/dep_ece"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eceDep" />

                <RadioButton
                    android:id="@+id/dep_mech"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mechDep" />

                <RadioButton
                    android:id="@+id/dep_civil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civilDep" />

                <RadioButton
                    android:id="@+id/dep_eee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eeeDep" />

                <RadioButton
                    android:id="@+id/dep_fyr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstYear" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/has_constraints"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/department_group" />

            <RadioGroup
                android:id="@+id/constraint_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12">

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

            <Button
                android:id="@+id/add_the_staff_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_group" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>