<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1, 2, 3, 4, 5, 6, 7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/onlineScheduleRow"
            android:padding="10dp">

            <TextView
                android:id="@+id/onlineDayText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:outlineProvider="bounds"
                android:text="@string/one"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/onlineFirstPeriod"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center"
                android:outlineProvider="bounds"
                android:text="@string/one"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/onlineSecondPeriod"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="center"
                android:text="@string/two"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/onlineThirdPeriod"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="center"
                android:outlineProvider="bounds"
                android:text="@string/three"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/onlineFourthPeriod"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_gravity="center"
                android:text="@string/four"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/onlineFifthPeriod"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:layout_gravity="center"
                android:outlineProvider="bounds"
                android:text="@string/five"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/onlineSixthPeriod"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_column="7"
                android:layout_gravity="center"
                android:text="@string/six"
                android:textSize="17sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>